# EddieBot-ROS

./: .gitignore  LICENSE  README.md
eddiebot/: README.md
eddiebot/eddiebot_bringup/: CMakeLists.txt  README.md  package.xml
eddiebot/eddiebot_description/: CMakeLists.txt  README.md  package.xml
eddiebot/eddiebot_launchers/: CMakeLists.txt  README.md  package.xml
eddiebot/eddiebot_msgs/: CMakeLists.txt  package.xml
eddiebot/eddiebot_odom/: CMakeLists.txt  package.xml
eddiebot/eddiebot_teleop/: CMakeLists.txt  README.md  package.xml
eddiebot/eddiebot_vel_controller/: CMakeLists.txt  README.md  package.xml
eddiebot_apps/: README.md
eddiebot_apps/eddiebot_map_parser/: CMakeLists.txt  package.xml
eddiebot_apps/eddiebot_navigation/: CMakeLists.txt  README.md  package.xml
eddiebot_apps/eddiebot_ssl/: CMakeLists.txt  README.md  package.xml
eddiebot_apps/room_segmentation/: CMakeLists.txt  README.md  package.xml
eddiebot_simulator/: README.md
eddiebot_simulator/eddiebot_gazebo/: README.md  package.xml
eddiebot_viz/: README.md
eddiebot_viz/eddiebot_rviz_launchers/: CMakeLists.txt  README.md  package.xml
eddiebot_viz/eddiebot_rviz_launchers/launch/: view_model.launch
eddiebot_viz/eddiebot_rviz_launchers/rviz/: view_mapping.rviz  view_model.rviz
parallax_eddie_driver/: CMakeLists.txt  package.xml
parallax_eddie_driver/include/: eddie.h  eddie_adc.h  eddie_controller.h  eddie_ping.h  eddie_teleop.h
parallax_eddie_driver/launch/: eddie.launch
parallax_eddie_driver/src/: eddie.cpp  eddie_adc.cpp  eddie_controller.cpp  eddie_ping.cpp  (+1 more)
(+125 files in other folders)
