<?xml version="1.0"?>
<package format="2">
  <name>eddiebot_rviz_launchers</name>
  <version>0.0.0</version>
  <description>The eddiebot_rviz_launchers package</description>
  
  <maintainer email="zeyuz@outlook.com">Zeyu Zhang</maintainer>


  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>eddiebot_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
